--- a/students/student2.html
+++ b/students/student2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hồ sơ cá nhân - Đỗ Tiến Đức</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../assets/css/styles1.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
     </nav>
     <div class="container">
         <div class="avatar-container">
-            <img src="assets/images/avatar2.jpg" alt="Avatar" class="avatar">
+            <img src="/WebGTBanThan-9/assets/images/avatar2.jpg" alt="Avatar" class="avatar">
         </div>
         <section id="about" class="section">
             <h2>Giới thiệu bản thân</h2>
