--- a/index.html
+++ b/index.html
@@ -91,34 +91,42 @@
                     </div>
                 </div>
             </a> 
+                <a href="students/hung.html">          
                 <div class="col-md-4">
                     <div class="team-member">
-                        <img src="assets/images/avatar2.jpg" alt="Thành viên 3" class="img-fluid rounded mb-3">
+                        <img src="assets/images/avatar1.jpg" alt="Thành viên 3" class="img-fluid rounded mb-3">
                         <h4>Lê Văn C</h4>
                         <p>Phát triển Backend</p>
                     </div>
                 </div>
+            </a> 
+                <a href="students/index4.html">          
                 <div class="col-md-4">
                     <div class="team-member">
-                        <img src="assets/images/avatar3.jpg" alt="Thành viên 3" class="img-fluid rounded mb-3">
+                        <img src="assets/images/avatar1.jpg" alt="Thành viên 3" class="img-fluid rounded mb-3">
                         <h4>Lê Văn C</h4>
                         <p>Phát triển Backend</p>
                     </div>
                 </div>
+            </a> 
+               <a href="students/student2.html">          
                 <div class="col-md-4">
                     <div class="team-member">
-                        <img src="assets/images/avatar4.jpg" alt="Thành viên 3" class="img-fluid rounded mb-3">
+                        <img src="assets/images/avatar1.jpg" alt="Thành viên 3" class="img-fluid rounded mb-3">
                         <h4>Lê Văn C</h4>
                         <p>Phát triển Backend</p>
                     </div>
                 </div>
+            </a> 
+                <a href="students/student3.html">          
                 <div class="col-md-4">
                     <div class="team-member">
-                        <img src="assets/images/avatar5.jpg" alt="Thành viên 3" class="img-fluid rounded mb-3">
+                        <img src="assets/images/avatar1.jpg" alt="Thành viên 3" class="img-fluid rounded mb-3">
                         <h4>Lê Văn C</h4>
                         <p>Phát triển Backend</p>
                     </div>
                 </div>
+            </a> 
 
             </div>
         </div>
