--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </a> 
-                <a href="students/hung.html">          
+                <a href="students/Hung.html">          
                 <div class="col-md-4">
                     <div class="team-member">
                         <img src="assets/images/1.jpg" alt="Thành viên 3" class="img-fluid rounded mb-3">
