--- a/students/Hung.html
+++ b/students/Hung.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giới thiệu bản thân - Công nghệ phần mềm</title>
-    <link rel="stylesheet" href="/public/css/hung.css">
+    <link rel="stylesheet" href="/assets/css/hung.css">
 </head>
 <body>
     <!-- Header -->
     <header>
-        <img class="profile-img" src="/public/image/1.jpg" alt="">
+        <img class="profile-img" src="/assets/image/1.jpg" alt="">
         <div class="title">
             <h1>Nguyễn Quý Hùng</h1>
             <p>Sinh viên năm 4 ngành Công nghệ phần mềm</p>
@@ -90,6 +90,6 @@
         </div>
     </section>
 
-    <script src="/public/js/hung.js"></script>
+    <script src="/assets/js/hung.js"></script>
 </body>
 </html>
